weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  namespace: lfs158
  labels:
    app: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: fetcher
        image: itaybs/weather-fetcher:7
        volumeMounts:
        - mountPath: /app/host-vol
          name: host-volume
      - name: nginx
        image: nginx:1.21.3
        ports:
        - containerPort: 80
        
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: host-volume
        
        startupProbe:
          exec:
            command:
            - cat
            - /usr/share/nginx/html/index.html
          initialDelaySeconds: 2
          periodSeconds: 5
        
        readinessProbe:
          exec:
            command:
            - cat
            - /usr/share/nginx/html/index.html
          initialDelaySeconds: 5
          periodSeconds: 5 

      volumes:
      - name: host-volume
        hostPath:
          path: /home/docker/test
