weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather
  namespace: lfs158
spec:
  type: NodePort
  selector:
    app: weather
  ports:
    - name: main
      protocol: TCP
      port: 4242
      targetPort: 80
      nodePort: 30008
