weather-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather
  namespace: lfs158
spec:
  rules:
  - host: weatherkube.com
    http:
      paths:
      - backend:
          service:
            name: weather
            port: 
              number: 4242
        path: /
        pathType: ImplementationSpecific
